<resources>
    <string name="app_name">VetAppointment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_appointment">Vet Appointment</string>
    <string name="menu_all_appointments">All Appointments</string>
    <string name="menu_onlineVet">Online Vet</string>
    <string name="menu_myMessages">My Messages</string>
    <string name="menu_review">Rate us</string>
    <string name="menu_about_us"> About us</string>
    <string name="menu_logout"> Logout </string>


    <string name="write_a_review">Write a Review</string>
    <string name="your_review">Your Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="overall_rating">Overall Rating:</string>
    <string name="all_reviews">All Reviews:</string>


    <string name="about_us_title">About Us</string>
    <string name="introduction_text">Welcome to Our Clinic. We provide the best services for your pets with love and care.</string>
    <string name="opening_time_text">Opening Time: 9:00 AM</string>
    <string name="closing_time_text">Closing Time: 8:00 PM</string>
    <string name="address_text">Address: 123 Main Street, City, Country</string>
    <string name="logo_desc">Clinic Logo</string>

    <string name="image_description">Zoomable Image</string>
    <string name="close_button_description">Close</string>

    <string-array name="appointment_options">
        <item> Vaccination  </item>
        <item> Castration </item>
        <item> chip </item>
        <item> Medical treatment </item>
    </string-array>


    <string-array name="start_times">
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
    </string-array>
    <string-array name="end_times">
        <item>20:00</item>
        <item>19:30</item>
        <item>19:00</item>
        <item>18:30</item>
        <item>18:00</item>
        <item>17:30</item>
        <item>17:00</item>
        <item>16:30</item>
        <item>16:00</item>
        <item>15:30</item>
        <item>15:00</item>
        <item>14:30</item>
        <item>14:00</item>
        <item>13:30</item>
        <item>13:00</item>


    </string-array>


</resources>