<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_appointment"
            android:icon="@drawable/add_square_svgrepo_com"
            android:title="@string/menu_add_appointment" />
        <item
            android:id="@+id/nav_all_appointments"
            android:icon="@drawable/calendar_user_svgrepo_com"
            android:title="@string/menu_all_appointments" />

        <item
            android:id="@+id/nav_onlineVet"
            android:icon="@drawable/online_class_svgrepo_com"
            android:title="@string/menu_onlineVet" />



        <item
            android:id="@+id/nav_myMessages"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/menu_myMessages" />



        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/review_checkmark_svgrepo_com"
            android:title="@string/menu_review" />



        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_svgrepo_com"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/menu_logout" />


    </group>
</menu>