<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vetappointment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_appointment"
        android:name="com.example.vetappointment.ui.AddNewAppointmentFragment"
        android:label="@string/menu_add_appointment"
        tools:layout="@layout/fragment_add_new_appointment" />

    <fragment
        android:id="@+id/nav_all_appointments"
        android:name="com.example.vetappointment.ui.AllAppointmentsUserFragment"
        android:label="@string/menu_all_appointments"
        tools:layout="@layout/fragment_all_appointments" />

    <fragment
        android:id="@+id/nav_onlineVet"
        android:name="com.example.vetappointment.ui.OnlineVetMessagesFragment"
        android:label="@string/menu_onlineVet"
        tools:layout="@layout/fragment_online_vet_messages" />

    <fragment
        android:id="@+id/nav_myMessages"
        android:name="com.example.vetappointment.ui.AllMessagesToVetFragment"
        android:label="@string/menu_myMessages"
        tools:layout="@layout/fragment_all_messages_to_vet" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.vetappointment.ui.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.vetappointment.ui.About_us_fragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" >
        <action
            android:id="@+id/action_nav_about_us_self"
            app:destination="@id/nav_about_us" />
    </fragment>


</navigation>